crates/audio/src/engine/live/snapshots/audio__engine__live__preload__tests__a_landed_crossfade_preload_still_hands_off.snap
---
source: crates/audio/src/engine/live/preload.rs
expression: log
---
[
    PreloadCrossfade {
        path: "/b",
        gain: None,
        speed: Speed(
            1.0,
        ),
    },
    Nothing,
    Promote {
        volume: 1.0,
    },
]
