crates/audio/src/engine/live/snapshots/audio__engine__live__preload__tests__a_landed_gapless_preload_still_hands_off_at_the_end.snap
---
source: crates/audio/src/engine/live/preload.rs
assertion_line: 207
expression: log
---
[
    PreloadGapless(
        "/b",
    ),
    Nothing,
    Batch(
        [
            Advance,
            Send(
                TrackChanged,
            ),
            Report,
        ],
    ),
]
