crates/audio/src/engine/live/snapshots/audio__engine__live__preload__tests__a_preload_landing_after_a_stop_is_ignored.snap
---
source: crates/audio/src/engine/live/preload.rs
expression: log
---
[
    PreloadCrossfade {
        path: "/b",
        gain: None,
        speed: Speed(
            1.0,
        ),
    },
    Clear,
    Nothing,
]
