crates/audio/src/engine/live/snapshots/audio__engine__live__preload__tests__a_preload_still_decoding_holds_up_neither_a_pause_nor_a_tick.snap
---
source: crates/audio/src/engine/live/preload.rs
expression: log
---
[
    PreloadGapless(
        "/b",
    ),
    Pause,
    Send(
        Position(
            5s,
        ),
    ),
]
